--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,8 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545843.md#1" target="_blank">9.29撑港反极权 立委：台湾不能缺席</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545843.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/20190925-biyun-t001-150x120.jpg" align ="left"></a>为声援香港“反送中”运动，由24个台湾民团主办、逾百个团体连署的“929撑港反极权”游行活动，25日邀请跨党派立委共同召开记者会，强调当前台湾与香港是命运共同体，同样面临中共政权压迫的危急存亡之秋，台湾民众929当天应现身力挺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545213.md#1" target="_blank">窃国70年 揭开中共糟蹋中国人的真相</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1312311127531528-600x400-150x120.jpg" align ="left"></a>中共在准备欢庆其篡政70周年时，一点不提其给中国人带来的灾难：一胎化政策，导致如今出现人口老龄化、劳动力不足问题，会迫使中国经济放缓；失去独生子女的家庭无法得到政府的辅助；破坏传统道德、一味发展经济，让不少中国人只为金钱利益，变成低素质人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536311.md#1" target="_blank">反修例事件 李嘉诚与中共的双重驳火</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536311.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/180510074427100311-150x120.jpg" align ="left"></a>9月8日，李嘉诚在公开场合劝诫执政者对香港青年人“网开一面”后，引发了中共文宣和政法委对李的激烈批评。9月13日，李嘉城回应的部分内容也显得强硬，双方驳火。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545702.md#1" target="_blank">中共十一狂令多 要求商户挂旗学生交代行踪</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/796696251b839e5483e10602fdf82a5b-150x120.png" align ="left"></a>临近“十一”，异见者、敏感人士不能留北京外，也波及外媒记者。商户还被要求悬挂统一尺寸的血旗，学生被要求交代假期去处，邮件、交通规定更严更细。中共为庆祝“十一”大花坛近日着火，民间纷指是兆头，“中共政权很快就要灰飞烟灭！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545309.md#1" target="_blank">中共国台办首度证实 台学者蔡金树遭羁押</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545309.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/840cecc0753fedc947c3a61378c72de0-150x120.jpg" align ="left"></a>中共以国安理由将蓝营学者蔡金树关押至今，海基会在9月13日证实，其去年7月20日在厦门失联，我方多次去函询问未获中国大陆具体回应。国台办9月25日例会上首度松口，蔡因涉嫌从事危害国家安全的活动，被有关部门依法审查，已通知他的家属，不存在失联的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 9:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545125.md#1" target="_blank">【翻墙必看】分析：中共在香港上演最后疯狂</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9564ca23-0c2e-4352-b08f-95a3f5ea1bdb-150x120.jpeg" align ="left"></a>】大纪元每天为读者梳理翻墙必看的文章：
 
@@ -34,7 +30,11 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544034.md#1" target="_blank">熊黛林产后重回秀场 走国际T台直呼挂念女儿</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/xiong-dailin-150x120.jpg" align ="left"></a>现定居香港的大陆名模熊黛林，24日受邀出席米兰时装周，为日本品牌时装走秀。由于舍不得离开两个女儿太长时间，所以她此行仅逗留三天两夜，在时装秀上压轴出场。久违国际T台的她，是秀场上唯一的东方面孔，台步沉稳，气场十足，特别引人注目，并收获各方好评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 6:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544222.md#1" target="_blank">登瑞士贵族学校官网 13岁李嫣校园生活曝光</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/VCG111117074934_meitu_1-150x120.jpg" align ="left"></a>大方自信的星二代李嫣，是歌手王菲和演员李亚鹏的女儿，一直是媒体关注的焦点。13岁的她，日前登上瑞士一间贵族学校的官网。其身穿制服的校园生活照曝光后，有网友搜索到，她入读的学校每年学费高达10.7万瑞士法郎（约合77万人民币），而且每年在全球仅招收250名学生，属于并不是仅凭钱就能进入的学校。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 6:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544233.md#1" target="_blank">【直播预告】十一临近 全球连场反共大游行</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544233.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c787eb7a125406_ttl7dayVhE_Sep28-29_Article_V2-150x120.png" align ="left"></a>正值中共建政70周年之际，港人再次发起多项大型集会游行，声称“没有国庆 只有国殇”；此外还有港台联手的“九二九台港大游行”、全球多个城市连线的“全球反极权大游行”等。新唐人电视台和《大纪元时报》将进行全程追踪和网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 6:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11546125.md#1" target="_blank">河南艾滋血祸揭露者王淑平在美国去世</a><br></h3>9月21日，王淑平医生与丈夫、朋友在美国犹他州盐湖城郊游时，不幸心脏病突发去世，年仅59周岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 12:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544445.md#1" target="_blank">十一阅兵前 百度百科突删4大“军虎”信息</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>中共十一阅兵前夕，落马的两名前中共军委副主席郭伯雄、徐才厚，中共前军委委员张阳、房峰辉在百度百科的信息被突然删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 6:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544091.md#1" target="_blank">【新闻看点】孟戴脚镣现身 任正非称敬仰美国</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544091.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/10-5-150x120.jpg" align ="left"></a>9月23日上午9点多，孟晚舟离开温哥华豪宅、前往法庭，接受一连8天的聆讯。而在女儿受审的同一天，任正非公开了自己早前的采访，显得有些怪异。任正非是在向美国服软吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 4:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543678.md#1" target="_blank">【新闻看点】吃饭就是人权？中共白皮书遭轰</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543678.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/9ceecbe5-995f-442d-84b4-8a23383ac9ac-1_meitu_2-600x400-150x120.jpg" align ="left"></a>22日，中共发表了《人权白皮书》，吹嘘取得了“人权巨大成就”。在遮盖“言论、新闻、结社”等基本人权概念的同时，中共称“人民幸福生活是最大的人权”。白皮书一出来，立刻引来了各方嘲笑。有网友直接说“吃饱饭就是人权？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 4:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544229.md#1" target="_blank">武汉当局借军运会加剧迫害法轮功学员</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1-67-600x370-150x120.jpg" align ="left"></a>武汉将于10月18日至27日举办第七届世界军人运动会。公安借此理由，加剧骚扰迫害当地的法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 4:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543861.md#1" target="_blank">孟晚舟出庭 脚上“电子脚镣”有6大功能</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1170531118-150x120.jpg" align ="left"></a>华为副董事长兼财务总监孟晚舟，9月23日离开其温哥华的豪宅，前往法庭接受聆讯时，露出了戴在她脚上的跟踪设备——电子脚镣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544982.md#1" target="_blank">防中共干预 马大维：加国应建外国代理登记处</a><br></h3>加拿大前驻华大使马大维（David Mulroney）表示，鉴于“中国共产党拥有发达的影响外国政治见解的机制”，加拿大应参考澳大利亚的做法，建立一个联邦登记处，记录加拿大人代表外国政府所做的工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 10:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11546015.md#1" target="_blank">大陆富豪女涉同新欢谋杀男友 旧金山开审</a><br></h3>9月23日，美国湾区富二代女子李凡妮（Tiffany Li）涉嫌谋杀前男友一案开庭。检察官指控李凡妮伙同新男友卡维·巴亚（Kaveh Bayat）一起谋杀了李的前男友基思·格林（Keith Green）。李和巴亚拒不认罪，预计这个审判将持续到11月中旬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 10:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545599.md#1" target="_blank">修炼法轮功绝症康复 武汉康佑元遭迫害离世</a><br></h3>武汉市法轮功学员康佑元多次遭绑架迫害，其中两次被关洗脑班，两次被非法劳教，被非法判刑3年，并遭酷刑折磨，身体受到极大的摧残，于2019年1月22日含冤离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 9:23 PM							</td></tr>
